// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`smoking CLI runs a mix of passing and failing cases: stdout 1`] = `
"FOO = tar
✔ pass
✘ fail
  1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-run-<random>/case-1.ts:1:11

Bun v<version> (<platform>)
"
`;

exports[`smoking CLI runs a mix of passing and failing cases: stderr 1`] = `
"1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-run-<random>/case-1.ts:1:11

Bun v<version> (<platform>)
"
`;

exports[`smoking CLI installs a declared \`dependency\` before running the case: stdout 1`] = `
"→ installing dependency: donly@0.0.29
bun add v<version> (<hash>)

installed donly@0.0.29 with binaries:
 - donly

parsed greeting = hello
✔ uses-dependency
"
`;

exports[`smoking CLI installs a declared \`dependency\` before running the case: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI installs a \`dependency\` pinned to a specific version: stdout 1`] = `
"→ installing dependency: donly@0.0.28
bun add v<version> (<hash>)

installed donly@0.0.28 with binaries:
 - donly

parsed greeting = hello
✔ pinned-version
"
`;

exports[`smoking CLI installs a \`dependency\` pinned to a specific version: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI installs hotconfigs and reads an env-backed config in the case script: stdout 1`] = `
"→ installing dependency: hotconfigs@1.0.8
bun add v<version> (<hash>)

installed hotconfigs@1.0.8

FOO = tar
✔ uses-hotconfigs
"
`;

exports[`smoking CLI installs hotconfigs and reads an env-backed config in the case script: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI writes a \`file\` directive's content before running the case: stdout 1`] = `
"file content = Content
✔ did
"
`;

exports[`smoking CLI writes a \`file\` directive's content before running the case: stderr 1`] = `""`;

exports[`smoking CLI --dependency installs extra packages as if declared in the file: stdout 1`] = `
"→ installing dependency: lodash@4.17.21
bun add v<version> (<hash>)

installed lodash@4.17.21

→ installing dependency: donly@0.0.29
bun add v<version> (<hash>)

installed donly@0.0.29 with binaries:
 - donly

chunks = 2
parsed = hello
✔ uses-flag-dependencies
"
`;

exports[`smoking CLI --dependency installs extra packages as if declared in the file: stderr 1`] = `
"Saved lockfile
Saved lockfile
"
`;

exports[`smoking CLI --help prints the documented usage and file format: stdout 1`] = `
"smoking - run test cases described in .donly files

USAGE
  bunx @jondotsoy/smoking [options] <file.donly>
  npx  @jondotsoy/smoking [options] <file.donly>

OPTIONS
  --dependency <package>[@version]
        Install an extra npm package, exactly as if the file started with a
        "dependency <package>" line. Repeatable:

          bunx @jondotsoy/smoking --dependency lodash --dependency react file.donly

        is the same as putting these lines at the top of file.donly:

          dependency lodash
          dependency react

  -h, --help
        Show this help message and exit.

DESCRIPTION
  A .donly file (DON, "Directive Object Notation") declares the npm packages a
  test needs and one or more \`case\` blocks. smoking installs the packages,
  runs every case and prints whether it passed or failed. Each case is a small
  TypeScript/JavaScript script executed with Bun; it passes when the script
  exits with code 0 and fails when it throws or exits with any other code.

FILE FORMAT
  Top-level directives:

    dependency <package>[@version]
        npm package to install before any case runs. Pin a version with
        "@", e.g. "dependency donly@0.0.28". Repeat the directive to install
        several packages.

    case [name] { ... }
        One test case. A file may contain several; they run in order. The
        optional name is what smoking prints next to the result (cases
        without one are called "case 1", "case 2", ...).

  Directives inside a case:

    env <NAME> <VALUE>
        Set an environment variable for this case's script. Repeatable.

    file <path> <<<ext
        Write a file before the script runs. <path> is relative to the
        case's working directory and its parent folders are created for you.
        The heredoc body (the indented lines below it) is the file content.
        Repeatable.

    run <<<lang
        The script to execute. The heredoc delimiter picks the language:
        ts (default), tsx, js, jsx or mjs. The script runs with its working
        directory set to the same folder the "file" directives write to, so
        relative paths like "./greeting.txt" just work. Required.

  Heredocs start with "<<<" followed by a label and continue with the
  indented lines below; the indentation is stripped from the content.

EXAMPLE
  Save this as example.donly and run "bunx @jondotsoy/smoking example.donly":

    dependency hotconfigs

    case reads-config-from-env {
      env FOO tar
      file ./greeting.txt <<<txt
        hello
      run <<<ts
        import { readFileSync } from "node:fs"
        import { load, string } from "hotconfigs"

        const configs = await load({ FOO: string() })
        if (configs.FOO.get() !== "tar") throw new Error("FOO should be tar")

        const greeting = readFileSync("./greeting.txt", "utf8").trim()
        if (greeting !== "hello") throw new Error("unexpected greeting: " + greeting)

        console.log("config and file look good")
    }

OUTPUT
  Script output is printed as it happens, followed by one line per case:

    ✔ <case name>     the case passed
    ✘ <case name>     the case failed; the error is printed right below

EXIT CODES
  0    every case passed (or --help was requested)
  1    at least one case failed, or the command was used incorrectly

ISOLATION
  Every run happens inside its own temporary directory: dependencies are
  installed there and scripts run from there, and the directory is deleted
  afterwards. smoking never touches the package.json or node_modules of the
  project you run it from.

REQUIREMENTS
  Bun must be installed (https://bun.sh). It is used to install the
  dependencies and to run each script.

"
`;

exports[`smoking CLI rejects unknown options: stderr 1`] = `
"Unknown option: --nope

smoking - run test cases described in .donly files

USAGE
  bunx @jondotsoy/smoking [options] <file.donly>
  npx  @jondotsoy/smoking [options] <file.donly>

OPTIONS
  --dependency <package>[@version]
        Install an extra npm package, exactly as if the file started with a
        "dependency <package>" line. Repeatable:

          bunx @jondotsoy/smoking --dependency lodash --dependency react file.donly

        is the same as putting these lines at the top of file.donly:

          dependency lodash
          dependency react

  -h, --help
        Show this help message and exit.

DESCRIPTION
  A .donly file (DON, "Directive Object Notation") declares the npm packages a
  test needs and one or more \`case\` blocks. smoking installs the packages,
  runs every case and prints whether it passed or failed. Each case is a small
  TypeScript/JavaScript script executed with Bun; it passes when the script
  exits with code 0 and fails when it throws or exits with any other code.

FILE FORMAT
  Top-level directives:

    dependency <package>[@version]
        npm package to install before any case runs. Pin a version with
        "@", e.g. "dependency donly@0.0.28". Repeat the directive to install
        several packages.

    case [name] { ... }
        One test case. A file may contain several; they run in order. The
        optional name is what smoking prints next to the result (cases
        without one are called "case 1", "case 2", ...).

  Directives inside a case:

    env <NAME> <VALUE>
        Set an environment variable for this case's script. Repeatable.

    file <path> <<<ext
        Write a file before the script runs. <path> is relative to the
        case's working directory and its parent folders are created for you.
        The heredoc body (the indented lines below it) is the file content.
        Repeatable.

    run <<<lang
        The script to execute. The heredoc delimiter picks the language:
        ts (default), tsx, js, jsx or mjs. The script runs with its working
        directory set to the same folder the "file" directives write to, so
        relative paths like "./greeting.txt" just work. Required.

  Heredocs start with "<<<" followed by a label and continue with the
  indented lines below; the indentation is stripped from the content.

EXAMPLE
  Save this as example.donly and run "bunx @jondotsoy/smoking example.donly":

    dependency hotconfigs

    case reads-config-from-env {
      env FOO tar
      file ./greeting.txt <<<txt
        hello
      run <<<ts
        import { readFileSync } from "node:fs"
        import { load, string } from "hotconfigs"

        const configs = await load({ FOO: string() })
        if (configs.FOO.get() !== "tar") throw new Error("FOO should be tar")

        const greeting = readFileSync("./greeting.txt", "utf8").trim()
        if (greeting !== "hello") throw new Error("unexpected greeting: " + greeting)

        console.log("config and file look good")
    }

OUTPUT
  Script output is printed as it happens, followed by one line per case:

    ✔ <case name>     the case passed
    ✘ <case name>     the case failed; the error is printed right below

EXIT CODES
  0    every case passed (or --help was requested)
  1    at least one case failed, or the command was used incorrectly

ISOLATION
  Every run happens inside its own temporary directory: dependencies are
  installed there and scripts run from there, and the directory is deleted
  afterwards. smoking never touches the package.json or node_modules of the
  project you run it from.

REQUIREMENTS
  Bun must be installed (https://bun.sh). It is used to install the
  dependencies and to run each script.

"
`;

exports[`smoking CLI the example shown in --help actually passes: stdout 1`] = `
"→ installing dependency: hotconfigs
bun add v<version> (<hash>)

installed hotconfigs@<latest>

config and file look good
✔ reads-config-from-env
"
`;
